_header.scss: changed

--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -16,7 +16,7 @@
 .navbar__title {
   flex: 0 1 auto;
   margin: 0 1.25rem 0 0;
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 .navbar__logo {
