_header.scss: changed

--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -17,7 +17,7 @@
   flex: 0 1 auto;
   margin: 0 1.25rem 0 0;
   text-decoration: underline;
-  color: yellow;
+  color: rgb(65, 112, 243);
 }
 
 .navbar__logo {
